--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "commonjs",
+    "module": "es2020",
+    "allowJs": true,
+    "checkJs": true,
     "strict": true,
     "esModuleInterop": true,
-    "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "build"
   }
