--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "type": "module",
   "scripts": {
     "start": "node build/index.js",
-    "build": "tsc",
+    "clean": "gulp",
+    "build": "gulp && tsc ",
     "develop": "tsc --watch"
   },
   "devDependencies": {
+    "@types/gulp": "^4.0.8",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
